--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,31 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 body{
     font-family: 'Nunito', sans-serif;
-    
 }
-
-#chat-container{
+#chat_container{
     max-width: 600px;
     margin: 30px auto;
     border: 1px solid #ddd;
     box-shadow: 1px 3px 5px rgba(0,0,0 ,0.5);
-}
-#chat-window{
-    padding: 14px 0;
-    margin: 0 20px;
-    border-bottom: 1px solid #e9e9e9;
-    color: #555;
-}
-#output p{
-    color: #aaa;
-    padding: 14px 0;
-    margin: 0 20px;
-}
-#actions p{
-    padding: 14px 0;
-    margin: 0 20px;
-    border-bottom: 1px solid #e9e9e9;
-    color: #555;
 }
 input{
     padding: 10px 20px;
@@ -43,4 +24,30 @@ button{
     padding: 12px 0;
     width: 100%;
     border-radius: 0 0 2px 2px;
+}
+.text-center{
+    text-align: center;
+}
+.alert{
+    width: 60%;
+    margin-top: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1rem;
+    display: block;
+    background: #ec1d1d;
+    border: solid 1px #555;
+    border-radius: 10px;
+}
+.alert>h4{
+    padding: 0.5 rem;
+    text-align: center;
+    color: #ffffff;
+}
+.alert>h5{
+    text-align: center;
+    color: #fff;
+}
+.hidden{
+    display: none;
 }
